<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mareuapp.ui.AddMeetingActivity">

    <LinearLayout
        android:id="@+id/textInpoutContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/addingErrorTV">

        <EditText
            android:id="@+id/room_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="Lieu"
            app:boxBackgroundColor="@android:color/transparent"/>

        <EditText
            android:id="@+id/topic_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="Sujet"/>

        <EditText
            android:id="@+id/participants_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="@android:color/transparent"
            android:ems="10"
            android:hint="Participants"
            android:maxLines="100"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:text="Heure de début :"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:text="Heure de fin :"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/startTime_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="00:01"
                android:layout_marginEnd="40dp"/>
            <Button
                android:id="@+id/endTime_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="23:59"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="Ajouter une couleur :"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/addColorlabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <com.example.colorpicker.FloatingButton
                android:id="@+id/colorPickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/addingErrorTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textSize="15dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/textInpoutContainer"
        app:layout_constraintBottom_toTopOf="@id/add_button"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:text="Ajouter"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>