<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:id="@+id/filterLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/filterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filtrer"
            android:layout_marginRight="30dp"
            android:textColor="@color/purple_500"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="2dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            />
        <Button
            android:id="@+id/cancelFilterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="5dp"
            android:text="x annuler"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_list_user_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterLL"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/noMeetingTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Aucune réunion créée"
        android:textSize="15sp"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/filterLL"
        android:gravity="center"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_add_new"
        app:tint="@color/white"
        app:backgroundTint="#EF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>