...
        android:maxLines="1"
        android:ellipsize="end"
        android:text="textqsjdhgsjhcrgdhusfgsudhjgfdcfuhgscsyushjfcgsudhjcsg"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/item_list_meeting_color"
        app:layout_constraintStart_toEndOf="@+id/item_list_meeting_color"
        app:layout_constraintEnd_toStartOf="@+id/item_list_meeting_delete_button"
        app:layout_constraintTop_toBottomOf="@+id/item_list_meeting_information" />

    <ImageButton
        android:id="@+id/item_list_meeting_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
